syntax = "proto3";
package logcanal;

option java_multiple_files = true;

option java_outer_classname = "logcanal";

import "google/protobuf/timestamp.proto";

service LogCanal {
  rpc sink(stream MessageRequest) returns (ResponseStatus);
}

message MessageRequest{
  Message message = 1;
}

message Message{
  string message = 1;
  string timestamp =2;
  Service service = 3;
  string tags=4;

}
message Service{
  string name =1;
  string version =2;
}
message ResponseStatus {
  // The number of points received.
  int32 FallBackEnabled = 1;

}
